server/TinTin/TinTin/src/main/java/com/example/TinTin/util/error/OrderCreationException.java
package com.example.TinTin.util.error;

public class OrderCreationException extends RuntimeException {
    public OrderCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
